<refactor> 기물 클래스들을 Sliding/NonSliding Piece로 분리해서 추출